# travel-monitor

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  monitor.yml
src/: __init__.py  monitor.py  notifier.py  scraper.py
src/templates/: email.html  email_card.html  email_leg.html
tests/: test_notifier.py
